# rusty-cli-1

./: AGENTS.md  COMINGSOON.md  Cargo.toml  FIXME.md  README.md  install.sh  mcp_config.toml
src/: api.rs  chat.rs  chat_with_tools.rs  config.rs  main.rs  mcp.rs  session.rs  tools.rs  tools.rs.backup
