[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sam Atagana"]
description = "A fast, reliable CLI for DeepSeek API"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
dirs = "5.0"
toml = "0.8"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
eventsource-stream = "0.2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["formatting", "parsing"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
regex = "1"
trash = "3"
serde_yaml = "0.9"
sha2 = "0.10"
shlex = "1.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
